<resources>
    <string name="app_name">Warm Showers</string>
    <string name="app_title">"Warm Showers"</string>
    <string name="app_version">Version %1$s</string>
    <string name="label">WarmShowers for Android</string>
    <string name="authenticating">Authenticating …</string>
    <string name="need_account">Cannot run without WarmShowers credentials</string>
    <string name="authentication_failed">Authentication failed. Please re-enter your credentials.</string>
    <string name="no_starred_hosts">"You currently have no favorited hosts (hosts whose profiles are available offline). You can favorite hosts on the host information page."</string>
    <string name="list_search_hint">Name or city</string>
    <string name="no_results">Your search yielded no results.</string>
    <string name="enter_credentials">Please enter your Warmshowers.org username (or email) and password:</string>
    <string name="view_details">View details</string>
    <string name="star">Star</string>
    <string name="close">Close</string>
    <string name="username_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="password">Password:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="description">About this member</string>
    <string name="last_login"><u>Last login:</u></string>
    <string name="member_since"><u>Member since:</u></string>
    <string name="location"><u>Location:</u></string>
    <string name="mobile_phone"><u>Mobile phone:</u></string>
    <string name="preferred_notice"><u>Preferred notice:</u></string>
    <string name="max_guests"><u>Max guests:</u></string>
    <string name="nearest_accomodation"><u>Accommodation:</u></string>
    <string name="campground"><u>Campground:</u></string>
    <string name="bike_shop"><u>Bike shop:</u></string>
    <string name="services"><u>May provide:</u></string>
    <string name="home_phone"><u>Home phone:</u></string>
    <string name="work_phone"><u>Work phone:</u></string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="last_updated">Last updated: </string>
    <string name="host_updated">Host information updated.</string>
    <string name="host_not_available">This member is marked as not currently available. You may still contact the member, but not for hosting.</string>
    <string name="host_info_in_progress">Retrieving host information …</string>
    <string name="unstar_host">Un-favorite this host?</string>
    <string name="host_starred">Member favorited. You can now access this information offline.</string>
    <string name="host_unstarred">Member un-favorited.</string>
    <string name="performing_search">Performing search …</string>
    <string name="io_error">Internet access failure, please check your Internet connection.</string>
    <string name="http_unexpected_failure">Unexpected error accessing server. Check your credentials and Internet connection.</string>
    <string name="subject_hint">Enter subject here</string>
    <string name="message_hint">Enter message here</string>
    <string name="message_validation_error">Both subject and message are required.</string>
    <string name="sending_message">Sending message …</string>
    <string name="error_sending_message">Could not send message. Check your credentials and internet connection.</string>
    <string name="message_sent">Message sent successfully.</string>
    <string name="about_1">"Developed by Warmshowers.org volunteers led by original author Johannes Staffans.</string>
    <string name="about_2">This application is open source under the Apache 2.0 license. Contribute by forking our repository at github.com/warmshowers/wsandroid\nReport problems there or via the Warmshowers contact form, warmshowers.org/contact</string>
    <string name="feedback">Feedback (%1$d)</string>
    <string name="error_retrieving_messages">An error occurred while retrieving messages.</string>
    <string name="messages_in_progress">Retrieving messages …</string>
    <string name="no_unread_messages">You have no unread messages.</string>
    <string name="unread_messages">You have %d unread message(s).</string>
    <string name="updateMessages">Update</string>
    <string name="loading_hosts">Loading hosts …</string>
    <string name="hosts_at_location">%1$s hosts at %2$s</string>
	<string name="view_on_site">View on website</string>
    <string name="host_count">%1$d hosts at this location</string>
    <string name="click_to_view_all"><strong>Click to view all</strong></string>
    <string name="map_default_latitude">46.8625</string>
    <string name="map_default_longitude">-114.011667</string>
    <string name="alert_neutral_button">OK</string>
    <string name="contact_message_to">"Message to %1$s"</string>
    <string name="disconnected_location_services">Disconnected from Google Play services. Please re-connect.</string>
    <string name="hosts_dont_load">Host locations don\'t load at this zoom level\nZoom in....</string>
    <string name="distance_from_current">"%1$d %2$s from current location"</string>
    <string name="host_not_currently_available">(Not currently available)</string>
    <string name="host_currently_available">(Available for hosting)</string>
    <string name="parsing_error">Error parsing response from server. Please report this search using the contact form at warmshowers.org.</string>
    <string name="unknown_exception">Unknown error, please report to warmshowers.org contact form: %1$s</string>
    <string name="send_message">Send message</string>
    <string name="view_on_map">View on WarmShowers map</string>
    <string name="view_in_maps_app">View in map application</string>
    <string name="title_activity_web_view" translatable="false">WebViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="leave_feedback">Leave feedback for this host</string>
    <string name="leave_feedback_for">Leave feedback for %1$s</string>
    <string name="viewMessagesOnSite">View messages on site</string>
    <string name="messages_on_site">Messages on site</string>
    <string name="ga_property_id" translatable="false">UA-13228014-2</string>
    <string name="prefs_distance_unit">Unit of distance</string>
    <string name="prefs_distance_unit_summary">Do you want distances expressed in kilometers or in miles?</string>
    <string name="prefs_ga_collect_stats_title">Send anonymous statistics</string>
    <string name="prefs_ga_collect_stats_summary">Sending statistics to Google Analytics helps the developers to understand usage and improve the app, but you can opt out.</string>
    <string name="languages_spoken"><u>Languages spoken:</u></string>
    <string name="map_network_not_connected">Network is not connected, showing starred hosts only.</string>
    <string name="open_in_map_application">Open in maps application</string>
    <string name="star_this_host">Star this host</string>
    <string name="unstar_this_host">Unstar this host</string>
    <string name="no_account">Account information has not been configured. Settings -> Account</string>
    <string name="http_server_access_failure">Failed communicating with server, please check your internet connection</string>
    <string name="host_info_basic_information">Basic information</string>
    <string name="json_error">Failed to parse json string returned from server</string>
    <string name="sending_feedback">Sending feedback</string>
    <string name="feedback_hint">Describe your experience with this member.</string>
    <string name="feedback_validation_error">You must enter at least 10 words feedback section.</string>
    <string name="feedback_sent">Your feedback for %1$s has been sent</string>
    <string name="leaving_feedback">"Leaving feedback for %1$s"</string>
    <string name="feedback_how_we_met_prompt">How did you meet this member? They were:</string>
    <string name="feedback_date_we_met">When we met:</string>
    <string name="feedback_send">Send feedback</string>
    <string name="lbl_feedback_overall_experience">What was your overall experience with %1$s?</string>
    <string name="feedback_how_we_met_error">You must select how you met this member.</string>
    <string name="feedback_overall_experience_error">You must choose a value for overall experience with this member</string>
    <string name="embedded_browser_warning">You have left the app and using an embedded browser to view Warmshowers.org. Use the back button to return to the app.</string>
    <string name="not_connected_to_network">You are not currently connected to the network.</string>
    <string name="hostinfo_activity_title">Member Profile</string>
    <string name="host_service_shower">Shower</string>
    <string name="host_services_food">Food</string>
    <string name="host_services_bed">Bed</string>
    <string name="host_service_laundry">Laundry</string>
    <string name="host_service_storage">Storage</string>
    <string name="host_service_kitchen">Use of kitchen</string>
    <string name="host_service_tentspace">Lawn space (for camping)</string>
    <string name="host_service_sag">SAG (vehicle support)</string>
    <string name="label_feedback_for_this_member">Your feedback for this member:</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="text_search_title">Text Search</string>
    <string name="search_hint">Host name or city/town</string>
    <string name="action_search">Host search</string>
    <string name="contact_host">Contact Member</string>
    <string name="search_host_summary">Member since %1$s, last active %2$s</string>
    <string name="host_limitations">Max guests %1$s, Languages spoken %2$s</string>
    <string name="favorite_host">Favorite Host</string>
    <string name="no_feedback_yet">No feedback yet</string>
    <string name="mobile_phone_abbrev">Mobile: %1$s</string>
    <string name="home_phone_abbrev">Home: %1$s</string>
    <string name="work_phone_abbrev">Work: %1$s</string>
    <string name="host_services_description">Services this host may offer: %1$s</string>
    <string name="nearby_service_accommodation">Accommodation</string>
    <string name="nearby_service_bikeshop">Bikeshop</string>
    <string name="nearby_services_description">Nearby services: %1$s</string>
    <string name="nearby_service_campground">Campground</string>
    <string name="not_currently_available">Not Currently Available</string>
    <string name="currently_available">Currently Available</string>
    <string name="current_login_status">You are currently logged in as %1$s</string>
    <string name="title_activity_about">About Warm Showers</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="title_activity_feedback">Leaving Feedback</string>
    <string name="login_logout">Log out on this device</string>
    <string name="title_activity_search">Search</string>
    <string name="hostinfo_profile">Profile</string>
    <string name="hostinfo_details">Details</string>
    <string name="view_licenses">View Open Source Licenses</string>
    <string name="sent_from_android" translatable="false">Sent from the <a href='https://play.google.com/store/apps/details?id=fi.bitrite.android.ws'>Warmshowers App for Android</a></string>
</resources>