<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ws="http://schemas.android.com/apk/res-auto" >

    <item
            android:id="@+id/menuSendMessageIcon"
            android:icon="@drawable/ic_action_email"
            ws:showAsAction="always" />

    <item
            android:id="@+id/menuStarIcon"
            android:icon="@drawable/ic_action_star_off"
            ws:showAsAction="always" />

    <item
            android:id="@+id/menu_overflow"
            android:icon="@drawable/ic_action_overflow"
            android:orderInCategory="11111"
            ws:showAsAction="always">

        <menu>
            <item
                    android:id="@+id/menuSendMessage"
                    android:title="@string/send_message"
                    ws:showAsAction="never" />

            <item
                    android:id="@+id/menuStar"
                    android:icon="@drawable/ic_action_star_off"
                    android:title="@string/star_this_host"
                    ws:showAsAction="never" />

            <item
                    android:id="@+id/menuMap"
                    android:title="@string/view_on_map"
                    ws:showAsAction="never" />

            <item
                    android:id="@+id/menuMapApplication"
                    android:title="@string/open_in_map_application"
                    ws:showAsAction="never"/>

            <item
                    android:id="@+id/menuViewOnSite"
                    android:title="@string/view_on_site"
                    ws:showAsAction="never" />

            <item
                    android:id="@+id/menuLeaveFeedback"
                    android:title="@string/leave_feedback"
                    ws:showAsAction="never" />


        </menu>
    </item>

</menu>