<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:src="@drawable/wslogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/app_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/about_lbl_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="Version xxx" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/about_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/about_2" />

    </LinearLayout>
</ScrollView>
