<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:id="@+id/scrollFeedbackActivity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/txtActivityTitle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/btnFeedbackSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="sendFeedback"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:src="@drawable/send_message" />
            </LinearLayout>

            <TextView
                android:id="@+id/noNetworkWarningFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textColor="#ffff121a" />

            <TextView
                android:id="@+id/lblOverallExperience"
                android:text="@string/lbl_feedback_overall_experience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/feedback_overall_experience"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:entries="@array/feedback_overall_experience_options"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/txtFeedbackTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_feedback_for_this_member"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="6dp" />

            <EditText
                android:id="@+id/feedbackEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_hint"
                android:enabled="true"
                android:minLines="3"
                android:visibility="visible"
                android:editable="true"
                android:focusable="true"
                android:inputType="text|textMultiLine" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_date_we_met"
                android:textSize="16dp"
                android:textStyle="bold"
                android:paddingTop="6dp" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />

            <TextView
                android:text="@string/feedback_how_we_met_prompt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="6dp" />

            <Spinner
                android:id="@+id/feedback_how_we_met"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:entries="@array/feedback_how_we_met_options"
                android:prompt="@string/feedback_how_we_met_prompt"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendFeedback"
                android:text="@string/feedback_send" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
