<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- activity view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >

            <LinearLayout
                android:id="@+id/loggedInLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/txtLoggedInStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="You are currently logged in as Joe (joe@nowhere.com)" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="logout"
                    android:text="Log out of Warmshowers on this device" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notLoggedInLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblCredentials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/enter_credentials" />

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:inputType="text">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/okButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:onClick="applyCredentials"
                        android:text="@string/ok" />

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:onClick="cancel"
                        android:text="@string/cancel" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/navigation_drawer" />
    </android.support.v4.widget.DrawerLayout>


</LinearLayout>