<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:src="@drawable/wslogo" />

        <TextView
            android:id="@+id/lblAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/app_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtAboutDetails1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/about_1" />

        <TextView
            android:id="@+id/txtAboutDetails2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/about_2" />

        <TextView
            android:id="@+id/txtAboutDetails3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/about_3" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
        <TextView
            android:id="@+id/txtAboutDetailsGoogle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="Some dummy text" />
    </LinearLayout>

</ScrollView>