<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- activity view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:src="@drawable/wslogo"/>

                <TextView
                    android:id="@+id/lblAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="15dp"
                    android:text="@string/app_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    tools:text="Version xxx"/>

                <TextView
                    android:id="@+id/txtAboutDetails1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/about_1"/>

                <TextView
                    android:id="@+id/txtAboutDetails2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/about_2"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>
